Argocd/argocd-grpc.yaml
#argocd-grpc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol-version: GRPC
  labels:
    app: argogrpc
  name: argogrpc
  namespace: argocd
spec:
  ports:
    - name: "80"
      port: 80      # HTTP
      protocol: TCP
      targetPort: 8080
      nodePort: 30081  # 클러스터 외부(ALB → EC2 노드)
  selector:
    app.kubernetes.io/name: argocd-server
  sessionAffinity: None
  type: NodePort
